# tree-sitter-lslx

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lslx.pc.in
bindings/c/tree_sitter/: tree-sitter-lslx.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lslx/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLslxTests/: TreeSitterLslxTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  operators.txt  scripts.txt  statements.txt  top_statements.txt  types.txt
