[package]
name = "tree-sitter-lslx"
description = "Tree-sitter parser for Linden Scripting Language Extended"
version = "0.1.0"
authors = ["Doug Smith <dcsmith926@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lslx"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/dcsmith926/tree-sitter-lslx"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
